--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,3 +9,13 @@
     rgba(255, 122, 0, 1)
   );
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
