--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,3 +19,7 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
+.footer-logo path {
+  fill: white;
+}
