wallet modal light theme and ergopay enabled

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,7 +52,7 @@ input[type='number'] {
 }
 
 .ant-dropdown .ant-dropdown-menu {
-  background: #141414;
+  /*background: #141414;*/
   /*margin-left: 30px;*/
   /*border-radius: 20px;*/
 }
@@ -71,8 +71,8 @@ input[type='number'] {
   justify-content: space-between;
 }
 .ant-modal-content{
-  background: #141414 !important;
-  color: white;
+  background: #fff !important;
+  color: black;
   border-radius: 15px;
   box-shadow: 0 3px 6px -4px #0000001f, 0 6px 16px #00000014, 0 9px 28px 8px #0000000d
 }
@@ -89,10 +89,10 @@ input[type='number'] {
   border-radius: 10px;
 }
 .ant-modal-close-x{
-  color: white;
+  color: black;
 }
 .ant-tabs-tab-btn{
-  color: white !important;
+  color: black !important;
   font-size: 16px;
 }
 .ant-btn.ant-btn-lg{
