--- a/styles/common.module.css
+++ b/styles/common.module.css
@@ -340,7 +340,7 @@
 /* nav modal css end */
 
 .ergoBalanceDiv{
-    background: #1D1D1D;
+    /*background: #1D1D1D;*/
     border-radius: 15px;
     padding: 10px 15px;
     margin-bottom: 20px;
@@ -349,7 +349,8 @@
 }
 
 .ergoTokenBalanceDiv{
-    background: #1D1D1D;
+    /*background: #1D1D1D;*/
+    color: black;
     border-radius: 15px;
     padding: 10px 15px;
     margin-bottom: 5px;
@@ -387,11 +388,12 @@
 }
 
 .walletButton{
-    background: #1D1D1D;
+    /*background: #1D1D1D;*/
+    color: black;
     border-radius: 15px;
     padding: 12px 15px;
     margin-bottom: 5px;
-    border: 1px solid #262626;
+    border: 1px solid #D9D9D9;
     cursor: pointer;
 }
 
