--- a/styles/common.module.css
+++ b/styles/common.module.css
@@ -340,21 +340,21 @@
 /* nav modal css end */
 
 .ergoBalanceDiv{
-    /*background: #1D1D1D;*/
+    background: #FAFAFA;
     border-radius: 15px;
     padding: 10px 15px;
     margin-bottom: 20px;
-    border: 1px solid #262626;
+    border: 1px solid #F5F5F5;
     font-family: 'Vela Sans', sans-serif;
 }
 
 .ergoTokenBalanceDiv{
-    /*background: #1D1D1D;*/
+    background: #FAFAFA;
     color: black;
     border-radius: 15px;
     padding: 10px 15px;
     margin-bottom: 5px;
-    border: 1px solid #262626;
+    border: 1px solid #F5F5F5;
     font-family: 'Vela Sans', sans-serif;
 }
 
@@ -365,17 +365,20 @@
 }
 
 .ergoBalanceText{
+    font-weight: bold;
     font-size: 20px;
     margin-bottom: 0;
     margin-left: 10px;
     font-family: 'Space Grotesk', sans-serif;
 }
 .ergoBalanceAdd{
+    font-weight: bold;
     font-size: 20px;
     margin-bottom: 0;
     font-family: 'Space Grotesk', sans-serif;
 }
 .ergoBalanceTokenP{
+    font-weight: bold;
     font-size: 16px;
     margin-bottom: 0;
     margin-left: 10px;
