--- a/styles/common.module.css
+++ b/styles/common.module.css
@@ -379,7 +379,7 @@
   font-weight: bold;
   font-size: 20px;
   margin-bottom: 0;
-  color: black;
+  color: #262626;
   font-family: "Space Grotesk", sans-serif;
 }
 .ergoBalanceTokenP {
