--- a/styles/globals.css
+++ b/styles/globals.css
@@ -182,13 +182,13 @@ input[type="number"] {
 
 /* Handle (thumb) of the scrollbar */
 ::-webkit-scrollbar-thumb {
-  background-color: #a7a3a3;
+  background-color: #d9d9d9;
   border-radius: 4px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background-color: #777;
+  background-color: #d9d9d98f;
 }
 
 .overflow-hidden {
