--- a/styles/common.module.css
+++ b/styles/common.module.css
@@ -366,19 +366,17 @@
 }
 
 .ergoBalanceText {
-  font-weight: bold;
+  font-weight: 600;
   color: black;
   font-size: 20px;
   margin-bottom: 0;
   margin-left: 10px;
-  font-family: "Space Grotesk", sans-serif;
 }
 .ergoBalanceAdd {
-  font-weight: bold;
+  font-weight: 600;
   font-size: 20px;
   margin-bottom: 0;
   color: #262626;
-  font-family: "Space Grotesk", sans-serif;
 }
 .ergoBalanceTokenP {
   font-weight: bold;
